--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -48,7 +48,7 @@ OPEN_REPORTS_AFTER_EXECUTION = yes
 #send_email_to_users --> yes or no
 #If yes -> then, provide your mail credentials -> src/main/java -> package mail.com.cucumber.EmailConfig;
 # This Email will be sent using Java mail API
-SEND_EMAIL_TO_USERS = yes
+SEND_EMAIL_TO_USERS = no
 # Passed Steps Screenshot
 SCREENSHOT_PASSED_STEPS = no
 # Failed Steps Screenshot
