--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -14,14 +14,15 @@ BROWSER = chrome
 TARGET = local
 # headless mode only for chrome or firefox and local execution
 HEADLESS = false
-URL_CRM = https://rise.anhtester.com/signin
+URL_CMS = https://cms.anhtester.com/login
+URL_CRM = https://cms.anhtester.com/login
 # grid url and port
 REMOTE_URL = localhost
 REMOTE_PORT = 4444
 # Report information
 PROJECT_NAME = Automation Framework Cucumber | TestNG
 REPORT_TITLE = Report | Automation Framework Cucumber | TestNG
-EXTENT_REPORT_NAME = ExtentReport
+EXTENT_REPORT_NAME = CustomExtentReport
 EXTENT_REPORT_FOLDER = reports/CucumberExtentReports
 EXTENT_REPORT_PDF = PdfReport.pdf
 EXPORT_VIDEO_PATH = ExportData/Videos
@@ -42,7 +43,7 @@ VIDEO_RECORD = no
 #   - Windows_10_Tue_Oct_05_02_30_46_IST_2022_ExtentReports.html
 #   - Mac_OS_X_Tue_Feb_22_16_10_47_IST_2022_ExtentReports.html
 #If yes -> Report name will be ExtentReports.html
-OVERRIDE_REPORTS = yes
+OVERRIDE_REPORTS = no
 #open_reports_after_execution--> yes or no
 OPEN_REPORTS_AFTER_EXECUTION = yes
 #send_email_to_users --> yes or no
@@ -58,4 +59,4 @@ SCREENSHOT_ALL_STEPS = no
 # All Steps Detail Screenshot
 SCREENSHOT_ALL_STEPS_DETAIL = no
 # Delete the 'reports' folder before run test
-DELETE_TEMP_FOLDER = no
+DELETE_TEMP_FOLDER = yes
